# Zomato-Recommendation-System

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  deploymentPlan.md  edgecase.md  implementationPlan.md  problemStatement.md
docs/eval/: README.md  phase0-eval.md  phase1-eval.md  phase2-eval.md  phase3-eval.md  phase4-eval.md  phase5-eval.md  phase6-eval.md
src/zomato_rec/: config.py  main.py
src/zomato_rec/api/: dependencies.py  routes.py
src/zomato_rec/data/: index.py  loader.py  preprocessor.py
src/zomato_rec/filtering/: engine.py  hard_filters.py  ranker.py
src/zomato_rec/llm/: client.py  groq_client.py  parser.py  prompts.py
src/zomato_rec/models/: preferences.py  recommendation.py  restaurant.py
src/zomato_rec/services/: recommendation.py
tests/: conftest.py
tests/integration/: test_recommendation_flow.py
tests/unit/: test_filters.py  test_parser.py  test_preprocessor.py
ui/: streamlit_app.py
