[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zomato-rec"
version = "0.1.0"
description = "Zomato AI Restaurant Recommendation System"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "datasets",
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0.0",
    "pydantic-settings",
    "httpx",
    "groq",
    "streamlit"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]
